<resources>
    <string name="app_name">gastoviagem</string>
    <string name="distance">Distância</string>
    <string name="total_de_quilometros">Total de Quilometros</string>
    <string name="price_per_litro">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_litro">KMS por Litro</string>
    <string name="price">Preço</string>
    <string name="spend">seu gasto será de</string>
    <string name="value">R$ 0</string>
    <string name="calculate">Calcular</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>